--- a/app/views/helper/_upload_file.html.erb
+++ b/app/views/helper/_upload_file.html.erb
@@ -1,4 +1,8 @@
 <style>
+    .btn-success{
+        background-color:#5bb75b;
+        *background-color:#51a351;
+    }
     .fileinput-button {
         float: left;
         margin-right: 4px;
@@ -7,22 +11,28 @@
     }
 
     .fileinput-button input {
-        -moz-border-bottom-colors: none;
-        -moz-border-image: none;
-        -moz-border-left-colors: none;
-        -moz-border-right-colors: none;
-        -moz-border-top-colors: none;
-        -moz-transform: translate(-300px, 0pt) scale(4);
-        border-color: transparent;
-        border-style: solid;
-        border-width: 0 0 100px 200px;
-        cursor: pointer;
-        direction: ltr;
-        margin: 0;
-        opacity: 0;
         position: absolute;
-        right: 0;
         top: 0;
+        right: 0;
+        margin: 0;
+        border: solid transparent;
+        border-width: 0 0 100px 200px;
+        opacity: 0;
+        filter: alpha(opacity=0);
+        direction: ltr;
+        cursor: pointer;
+    }
+
+
+    /* Fix for IE 6: */
+    *html .fileinput-button {
+        line-height: 22px;
+        margin: 1px -3px 0 0;
+    }
+
+    /* Fix for IE 7: */
+    *+html .fileinput-button {
+        margin: 1px 0 0 0;
     }
 
     .upload-file .file-cell {
@@ -35,15 +45,17 @@
     }
 
 </style>
-<table class="upload-file" id="<%= upload_file_id %>">
+<table class="upload-file" id="<%= upload_file_id %>" style="width: 100%;">
   <tbody class="file-buttons">
   <tr>
     <td colspan="3">
-          <span class="btn btn-success fileinput-button">
-              <i class="icon-plus icon-white"></i>
-              <span><%= t(:label_icm_incident_journal_add_attachment) %>...</span>
-              <input type="file" multiple="" name="file_blank">
-          </span>
+      <span class="btn btn-success fileinput-button">
+         <% unless ie6? -%>
+           <i class="icon-plus icon-white"></i>
+         <% end -%>
+          <span><%= t(:label_icm_incident_journal_add_attachment) %>...</span>
+          <input type="file" multiple="" name="file_blank">
+      </span>
       <% if defined?(message) %>
           <label><%= message %></label>
       <% end %>
@@ -52,10 +64,16 @@
   </tbody>
   <tbody class="file-template" style="display:none" id="file-template">
   <tr class="file-item" ref="${sequence}">
-    <td><span class="file-name"><a target="_blank" href="${fileUrl}">${fileName}</a></span><span class="file-cell"></span></td>
-    <td class="file-description">
+    <td style="_width:100px;">
+      <span class="file-name">
+        <a target="_blank" href="${fileUrl}">${fileName}</a>
+      </span>
+      <span class="file-cell"></span>
+    </td>
+    <td class="file-description" style="_width: 200px;">
       <input type="hidden" value="${attachmentId}" name="${ref}[${sequence}][id]"/>
-      <input type="text" name="${ref}[${sequence}][description]" size="30"/></td>
+      <input type="text" name="${ref}[${sequence}][description]" size="30" style="_width: 90%;"/>
+    </td>
     <td>
       <div><a class="delete-file" delete_ref="${sequence}" delete_target="${deleteTarget}" href="javascript:void(0)"><%= t(:delete) %></a></div>
     </td>
@@ -68,6 +86,6 @@
         var options = {};
         options.type =  '';
         options.pastedZone =  null;
-        $("#<%= upload_file_id%>").upload_file_sample(options);
+        $("#<%= upload_file_id %>").upload_file_sample(options);
     });
 </script>
