--- a/app/views/helper/_upload_file_sample.html.erb
+++ b/app/views/helper/_upload_file_sample.html.erb
@@ -1,4 +1,8 @@
 <style>
+    .btn-success{
+        background-color:#5bb75b;
+        *background-color:#51a351;
+    }
     .fileinput-button {
         float: left;
         margin-right: 4px;
@@ -7,22 +11,27 @@
     }
 
     .fileinput-button input {
-        -moz-border-bottom-colors: none;
-        -moz-border-image: none;
-        -moz-border-left-colors: none;
-        -moz-border-right-colors: none;
-        -moz-border-top-colors: none;
-        -moz-transform: translate(-300px, 0pt) scale(4);
-        border-color: transparent;
-        border-style: solid;
-        border-width: 0 0 100px 200px;
-        cursor: pointer;
-        direction: ltr;
-        margin: 0;
-        opacity: 0;
         position: absolute;
-        right: 0;
         top: 0;
+        right: 0;
+        margin: 0;
+        border: solid transparent;
+        border-width: 0 0 100px 200px;
+        opacity: 0;
+        filter: alpha(opacity=0);
+        direction: ltr;
+        cursor: pointer;
+    }
+
+    /* Fix for IE 6: */
+    *html .fileinput-button {
+        line-height: 22px;
+        margin: 1px -3px 0 0;
+    }
+
+    /* Fix for IE 7: */
+    *+html .fileinput-button {
+        margin: 1px 0 0 0;
     }
 
     .upload-file .file-cell {
@@ -40,7 +49,9 @@
     <tr>
       <td colspan="3">
           <span class="btn btn-success fileinput-button">
-              <i class="icon-plus icon-white"></i>
+              <% unless ie6? -%>
+                <i class="icon-plus icon-white"></i>
+              <% end -%>
               <span><%= t(:label_icm_incident_journal_add_attachment) %>...</span>
               <input type="file" multiple="" name="file_blank">
           </span>
@@ -84,7 +95,7 @@
         options.type =  '<%= file_type %>';
         <% end %>
         <% if defined?(pasted_zone)%>
-        options.pastedZone =  '<%= pasted_zone %>';
+       options.pastedZone =  '<%= pasted_zone %>';
         <% end %>
         $("#<%= upload_file_id%>").upload_file_sample(options);
     });
