--- a/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
@@ -279,15 +279,15 @@
 
 
           <div class="page-block-body">
-            <table class="form-table"  style="width: 100%;">
+            <table  style="width: 100%;">
               <tbody>
               <tr>
                 <%= fields_for @incident_journal, :as=>"incident_journal", :builder => CustomFormBuilder, :normal=>true do |sub_f| %>
                     <%= sub_f.hidden_field(:incident_request_id) %>
                     <% if ie6? -%>
-                        <td class="data-4col" id="msgEditorParent" colspan="4" style="padding: 2px 20px 2px 10px;">
+                        <td class="data-2col" id="msgEditorParent" colspan="4" style="padding: 2px 20px 2px 10px;">
                     <% else -%>
-                    <td class="data-4col" id="msgEditorParent" colspan="4">
+                    <td class="data-2col" id="msgEditorParent" colspan="4">
                     <% end -%>
                       <%= sub_f.text_area :message_body, :id=>"msgEditor", :jrequired => true, :rows=>8,:cols=>20,:class=>"input-xxlarge",:style=>"width:100%" %>
                       <%= xheditor("msgEditor", true,true) %>
@@ -295,10 +295,10 @@
                 <% end %>
               </tr>
               <tr>
-                <td class="data-2col" colspan="2">
+                <td style="padding: 2px 10px;">
                   <%= render :partial=>"helper/upload_file", :locals=>{:upload_file_id=>"new_incident_request_journal_file"} %>
                 </td>
-                <td class="page-block-help" style="width: 450px; text-align: right; vertical-align: top;padding-right: 10px;">
+                <td style="float: right; width: 450px; text-align: right; vertical-align: top;padding-right: 10px;">
                   <span style="color:#ccc;"><%= t(:label_shortcuts_submit_form).html_safe %></span>
                   <%= link_submit t(:label_submit_replay),{:class=>"btn btn-primary",:style => "padding:4px 10px;font-size:12px;"}%>
                 </td>
@@ -371,8 +371,7 @@
           <td class="page-block-title">
             <h2 class="block-title"><%= t(:label_icm_incident_request_relation_config_items) %></h2>
           </td>
-          <td class="page-block-button"></td>
-          <td class="page-block-help form-inline" id="configItemForm">
+          <td class="page-block-help form-inline" id="configItemForm" colspan="2">
             <%= render :partial=>"icm/incident_config_relations/mini_form",:locals => {:incident_request=>@incident_request}%>
           </td>
         </tr>
@@ -389,14 +388,6 @@
     <% chm = Irm::ProductModule.usable?(:chm)&&@incident_request.change_request_id.present?;com = Irm::ProductModule.usable?(:com) %>
     <% if chm||com %>
         <!-- 处理关联的变更单 -->
-        <%- if params[:format].eql?('pdf') -%>
-           <%= content_for :incident_request_journals %>
-           <%- if chm -%>
-
-           <%- else -%>
-             <%= content_for :incident_config_items  %>
-           <%- end -%>
-        <%- else -%>
         <!-- start tabs -->
         <div class="tabs-container">
           <div class="mx-tabs" id="tabNav">
@@ -426,7 +417,6 @@
           </div>
         </div>
         <!-- end tabs -->
-        <%- end -%>
 
         <script type="text/javascript">
             $(function() {
