修复在IE6中dul_select组件显示换行

--- a/modules/10_ironmine_irm/app/views/irm/duel_select/_tmpl.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/duel_select/_tmpl.html.erb
@@ -1,6 +1,6 @@
 <% size = 14 unless defined?(size)%>
 <%column_size = (defined?(order)&&order ? 4:3 )%>
-<table class="duel-select" id="<%= str_value_field %>DuelSelect" >
+<table class="duel-select" id="<%= str_value_field %>DuelSelect" style="_width:100%;" >
   <%if defined?(types)&&types&&types.is_a?(Array)&&types.any?%>
     <tr class="duel-search-box">
       <td colspan="<%= column_size %>">
