--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/browser/ie6.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/browser/ie6.css.less
@@ -479,6 +479,7 @@ ul.thumbnails {margin-left:-20px;float:none;display:inline-block;zoom:1;clear:bo
 /*IE6下duel select组件*/
 table.duel-select tr.duel-list select {
     width: 180px;
+    width: auto;
     height: auto;
 }
 /*修复IE6下jquery chosen*/
