--- a/modules/50_change_chm/app/views/chm/change_approvals/new.html.erb
+++ b/modules/50_change_chm/app/views/chm/change_approvals/new.html.erb
@@ -1,68 +1,59 @@
-<%= common_title(:action_meaning=>t(:label_chm_change_approval_new)) %>
+<%= common_title(:action_meaning => t(:label_chm_change_approval_new)) %>
+<!--页面结构-->
+<div class="page-block">
+  <%= form_tag({:action=>"create", :change_request_id => @change_request.id},{:id=>"createForm"}) do %>
 
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <%= form_tag({:action=>"create", :change_request_id => @change_request.id}) do %>
-
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_chm_change_approval_new) %></h2></td>
-              <td class="pbButton">
-                <%= select_tag_alias(:advisory_board_id,available_advisory_board,params[:advisory_board_id],{:id=>"advisoryBoard"})  %>
-              </td>
-              <td id="topButtonRow" class="pbButton">
-
-                  <%= hidden_field_tag(:person_ids,params[:person_ids],:id=>"person_ids") %>
-                  <%= hidden_params_field(:back_url) %>
-                  <div class="button"><%= link_submit t(:add),:id=>"formSubmit"%></div>
-                  <div class="button"><%= link_back %></div>
-
-              </td>
-
-              <td class="pbHelp">
-                <div id="advisory_boardsSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <% end %>
-      </div>
-      <div class="pbBody">
-        <div id="people" class="datatable" style="width:100%">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_chm_change_approval_new) %></h2>
+      </td>
+      <td class="page-block-button">
+        <div class="form-inline">
+          <%= select_tag_alias(:advisory_board_id, available_advisory_board, params[:advisory_board_id], {:id => "advisoryBoard"}) %>
+          <%= hidden_field_tag(:person_ids, params[:person_ids], :id => "person_ids") %>
+          <%= hidden_params_field(:back_url) %>
+          <%= link_submit t(:add), :id => "formSubmit", :class => "btn" %>
+          <%= link_back t(:back), {}, {:class => "btn cancel"} %>
         </div>
-        <%= datatable("people",{:action=>"get_available_member", :change_request_id => @change_request.id,:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation), :hidden => true},{:key=>"person_id",:label=>t(:operation), :hidden => true},
-                       { :key => "full_name", :label => t(:label_irm_person_full_name),:searchable=>true },
-                       { :key => "email_address", :label => t(:label_irm_person_email_address),:searchable=>true },
-                       { :key => "organization_name", :label => t(:label_irm_organization),:searchable=>true }],
-                      {:paginator_box=>"advisory_boardsPaginatorBox",:search_box=>"advisory_boardsSearchBox",:select=>"multiple",:not_load=>true})%>
-        <div id="advisory_boardsPaginatorBox"></div>
-      </div>
-    </div>
+      </td>
+    </tr>
+  </table>
+  <%end%>
+  <div class="page-block-body">
+    <%= datatable("people", {:action => "get_available_member", :change_request_id => @change_request.id, :format => "json"}, [], {:lazy_load => true, :select => "multiple", :paginator_box => 'peoplePaginatorBox'}) %>
+  </div>
 </div>
 
 
 <script type="text/javascript">
-  Ext.onReady(function(){
-      $("#advisoryBoard").change(function(e){
-          Ext.getCmp("peopleDatatable").store.dtStaticParams({advisory_board_id:$("#advisoryBoard").val()});
-      });
-      var processSelected = function(selModel,selected){
-          var ids = [];
-          for(var i = 0;i<selected.length;i++){
-            ids.push(selected[i].data.person_id);
-          }
-          $("#person_ids").val(ids.join(","));
-      }
-      $("#formSubmit").click(function(e){
-          if($("#person_ids").val().length<1){
-              alert($.i18n("atLastSelectOneRecord"));
-              return false;
-          }
-      });
-      Ext.getCmp("peopleDatatable").selModel.addListener("selectionchange",processSelected);
-      $("#advisoryBoard").trigger("change");
-  });
+
+    $(document).ready(function () {
+        $("#advisoryBoard").change(function (e) {
+            var current_target = $("#people").data("datatable").target;
+            current_target.data.options.defaultOptions = {advisory_board_id:$("#advisoryBoard").val()};
+            current_target.loadPage(1);
+        });
+        $("#people").bind('selectionchange', function (event, ids) {
+            $("#person_ids").val(ids.join(","));
+            if (ids.length > 0)
+                $("#formSubmit").removeAttr("disabled");
+            else
+                $("#formSubmit").attr("disabled", true);
+        });
+
+        var ids = $("#person_ids").val();
+        if (ids.length > 0)
+            $("#formSubmit").removeAttr("disabled");
+        else
+            $("#formSubmit").attr("disabled", true);
+
+        $("#advisoryBoard").trigger("change");
+    });
 </script>
+<style type="text/css">
+  #createForm{
+      margin-bottom: 0;
+  }
+</style>
+
