修正: 1,新建变更审批页面布局混乱 2,事故单分类管理，添加应用系统时，没有搜索而且选项框高度太窄

--- a/modules/20_incident_icm/app/views/icm/incident_categories/_edit_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_categories/_edit_form.html.erb
@@ -36,7 +36,7 @@
            <td class="label-col"></td>
            <td class="data-col" colspan="3">
                <%= render :partial => "irm/duel_select/tmpl",
-                          :locals => {:f=>f,:sources=>external_system_duel_values,:str_value_field=>:system_str,
+                          :locals => {:f=>f,:types=>external_system_duel_type,:sources=>external_system_duel_values,:str_value_field=>:system_str,
                                       :str_value=>@incident_category.get_system_str, :size => 25} %>
            </td>
         </tr>
