--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/tabs.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/tabs.less
@@ -16,6 +16,9 @@
 .mx-tabs ul li:first-child {
   border-left:1px solid #e7e7e7;
 }
+.mx-tabs ul li.first {
+    border-left:1px solid #e7e7e7;
+}
 .mx-tabs ul li{
   border-top:1px solid #e7e7e7;
   border-right:1px solid #e7e7e7;
