解决在IE6下icon不透明

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/browser/ie6.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/browser/ie6.css.less
@@ -501,9 +501,9 @@ table.duel-select tr.duel-list select {
     padding-top: -5px;
 }
 
-@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
-@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
 //修复在IE6下图标
+@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.gif');
+@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.gif');
 i {
     background-image: url(@iconSpritePath);
     background-repeat: no-repeat;
