--- a/modules/10_ironmine_irm/app/views/irm/search/_search.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/search/_search.html.erb
@@ -3,7 +3,7 @@
 <table class="split-table" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td class="side-bar">
-      <div class="left-sidebar">
+      <div class='<%= ie6?? "left-sidebar" : "left-sidebar except-ie6"%>'>
         <span class="record-toggle toggle-on"><%= t(:label_search_options_setting) %></span>
         <ul class="tabs" id="entryList">
           <%= init_search_options %>
