--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/plugins/search.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/plugins/search.css.less
@@ -1,7 +1,8 @@
 @attachmentPath: asset-path('framework/attachment.gif');
 .search-page-block {
     padding: 0;
-    margin: auto;}
+    margin: auto;
+}
 .search-page-block li {
     list-style: none;
 }
@@ -43,9 +44,9 @@
     margin: 0;
     padding: 0;
 }
-/*.result ul li:hover {background-color: #f5f5f5;}*/
+//.result ul li:hover {background-color: #f5f5f5;}
 
-/* box-result-items */
+//box-result-items
 .search-page-block .box {margin:0;}
 .search-page-block .box ul {padding-left:25px}
 .search-page-block .box ul li {line-height: 12px;}
@@ -99,7 +100,8 @@
     margin-bottom:0;
     color:#000;
     font-size:2em;
-    font-weight:normal !important;}
+    font-weight:normal !important;
+}
 .search-page-block .left-sidebar {
     float: left;
     border-right:1px solid #CCC;
@@ -135,11 +137,8 @@
 .tabs {	margin-bottom: 2em; margin-left: 5px;}
 .tabs li {margin-bottom: 5px; padding-left: 8px; color: #7D7D84; position:relative; }
 .tabs li em {display: none;}
-.tabs li:hover {background-color:#cfeef8;cursor: pointer;}
-.tabs li:hover .check-btn {
-    display: block;
-}
-.tabs li .check-btn {
+.except-ie6.tabs li:hover {background-color:#cfeef8;cursor: pointer;}
+.except-ie6 .tabs li .check-btn {
     position:absolute;
     display:none;
     right:0;
@@ -151,7 +150,8 @@
     border:0 none;
     cursor:pointer
 }
-.tabs .current { color: #7D7D84; }
-.tabs .current .check-btn,.tabs .current em { display: block; }
+.except-ie6 .tabs li:hover .check-btn {display: block;}
+.except-ie6 .tabs .current { color: #7D7D84; }
+.except-ie6 .tabs .current .check-btn,.tabs .current em { display: block; }
 .tabs a.clear,.tabs a.clear:visited { color: #666; font-weight: 400; }
 .tabs em { position: absolute; margin: -1px 0 0 -8px; font-style: normal; }
