解决在IE6上一些列的问题

--- a/app/views/helper/_upload_file.html.erb
+++ b/app/views/helper/_upload_file.html.erb
@@ -50,9 +50,7 @@
   <tr>
     <td colspan="3">
       <span class="btn btn-success fileinput-button">
-
            <i class="icon-plus icon-white"></i>
-
           <span><%= t(:label_icm_incident_journal_add_attachment) %>...</span>
           <input type="file" multiple="" name="file_blank">
       </span>
@@ -84,8 +82,10 @@
 <script type="text/javascript">
     $(function(){
         var options = {};
-        options.type =  'jpg,png,gif';
-//        options.pastedZone =  null;
+        options.type =  '';
+        <% unless limit_device? -%>
+        options.pastedZone =  null;
+        <% end -%>
         $("#<%= upload_file_id %>").upload_file_sample(options);
     });
 </script>
