--- a/modules/20_incident_icm/app/views/icm/incident_journals/_list_journals.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/_list_journals.html.erb
@@ -9,7 +9,7 @@
           <%= t(:label_reply_title,:time_distance=>distance_of_time_in_words(Time.now,journal[:created_at]),:date_format=>format_date(journal[:created_at])) %>
         </span>
     </div>
-     <div style="float:right;">
+     <div style="float:right; padding: 5px 10px;">
        <% if allow_to_function?(:edit_any_journal) || (allow_to_function?(:edit_self_journal) && journal[:replied_by].eql?(Irm::Person.current.id)) %>
            &nbsp;&nbsp;<%= link_to t(:edit), {:controller => "icm/incident_journals", :action => "edit",
                                               :request_id => @incident_request.id, :id => journal[:id]}%>
