--- a/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
@@ -392,12 +392,12 @@
         <div class="tabs-container">
           <div class="mx-tabs" id="tabNav">
              <ul class="clear-fix">
-               <li class="active" id="nav_0" ref="incidentReply"><a href="#tab1" data-toggle="tab"><%= t(:label_icm_incident_journal_list) %></a></li>
+               <li class="first active" id="nav_0" ref="incidentReply"><a href="#tab1" data-toggle="tab"><%= t(:label_icm_incident_journal_list) %></a></li>
                <% if chm and has_module?(:chm) %>
                  <li id="nav_1" ref="changeRequest"><a href="#tab2" data-toggle="tab"><%= t(:label_chm_change_request) %></a></li>
                <% end %>
                <% if com and has_module?(:com) %>
-                 <li  ref="configItem"><a href="#tab3" data-toggle="tab"><%= t(:label_com_config_item) %></a></li>
+                 <li ref="configItem"><a href="#tab3" data-toggle="tab"><%= t(:label_com_config_item) %></a></li>
                <% end %>
              </ul>
           </div>
@@ -465,7 +465,6 @@
     </div>
     <div class="sub-page-block">
       <div class="sub-page-block-header">
-        <h3 class="sub-page-block-title">(<%= @incident_request[:incident_status_name] %>)[<%= @incident_request[:request_number] %>]<%= @incident_request[:title] %></h3>
         <div style="margin-left: 15px; display:inline; float: right;">
           <span>
             <a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_less_info) %>" ExpandedText="<%= t(:label_more_info) %>">
@@ -474,6 +473,7 @@
             </a>
           </span>
         </div>
+        <h3 class="sub-page-block-title">(<%= @incident_request[:incident_status_name] %>)[<%= @incident_request[:request_number] %>]<%= @incident_request[:title] %></h3>
       </div>
       <div class="sub-page-block-body">
         <%= content_for :block_header_content %>
