--- a/modules/20_incident_icm/app/views/icm/incident_requests/_customer_list.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_requests/_customer_list.html.erb
@@ -1,6 +1,5 @@
-<div id="incident_requests"></div>
-<%= datatable("incident_requests",{:action=>"get_data"},[],{:export_data=>"#incidentRequestExport",:not_load=>true,:search_box=>"incident_requestsSearchBox",:html=>true,:export_data=>"#exportData",:view_filter=>true})%>
-<div id="incidentRequestsPaginatorBox"></div>
-
-
-
+<%= datatable("incident_requests",{:action=>"get_data"},[],{:export_data=>"#incidentRequestExport",
+                                                                      :search_box=>"incident_requestsSearchBox",
+                                                                      :paginator_box=>'incidentRequestsPaginatorBox',
+                                                                      :view_filter=>true,:scroll=>"y",
+                                                                      :export_data=>"#exportData"})%>
