修正:审批步骤创建，步骤三，按钮显示不正确

--- a/modules/10_ironmine_irm/app/views/irm/wf_approval_steps/_edit_step_3.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_approval_steps/_edit_step_3.html.erb
@@ -65,7 +65,7 @@
    <% end %>
 
   <% content_for :form_buttons  do %>
-        <%= link_to t(:next), {:action => "edit",:pre_step=>true},{:class=>"submit btn"} %>
+        <%= link_to t(:last), {:action => "edit",:pre_step=>true},{:class=>"submit btn"} %>
         <%= link_submit t(:save),{:class=>"btn"} %>
         <%= link_back t(:cancel), {},:class=>"btn" %>
   <% end %>
