--- a/modules/20_incident_icm/app/views/icm/support_groups/_edit_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/support_groups/_edit_form.html.erb
@@ -4,13 +4,13 @@
       <tbody>
           <tr>
             <td class="label-col"><label><%=(t :label_icm_support_group_code)%></label></td>
-            <td class="data-col"><%=@group.code%></td>
+            <td class="data-col"><label><%=@group.code%></label></td>
             <td class="label-col"><label><%=(t :label_icm_support_group_oncall_flag)%></label></td>
             <td class="data-col"><%=f.check_box :oncall_flag%></td>
           </tr>
           <tr>
             <td class="label-col"><label><%=(t :label_icm_support_group_name)%></label></td>
-            <td class="data-col"><%=@group[:name]%></td>
+            <td class="data-col"><label><%=@group[:name]%></label></td>
             <td class="label-col"><label><%=(t :label_icm_support_group_vendor_flag)%></label></td>
             <td class="data-col"><%=f.check_box :vendor_flag%></td>
           </tr>
@@ -30,24 +30,6 @@
           </tr>
       </tbody>
     </table>
-  <% end %>
-  <% content_for :form_block_group   do%>
-    <table class="form-table">
-      <tbody>
-          <tr>
-            <td class="label-col empty">&nbsp;</td>
-            <td class="data-col empty">&nbsp;</td>
-            <td class="label-col empty">&nbsp;</td>
-            <td class="data-col empty">&nbsp;</td>
-          </tr>
-          <tr>
-            <td class="label-col"></td>
-            <td class="data-col" style="width:82%">
-              <%= render :partial => "irm/duel_select/tmpl",:locals => {:label=>"",:f=>f,:types=>support_group_duel_types,:sources=>support_group_duel_values,:str_value_field=>:assignment_str,:str_value=>@support_group.get_assignment_str,:size=>10} %>
-            </td>
-          </tr>
-      </tbody>
-    </table>      
   <% end %>
   <% content_for :form_buttons  do %>
     <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
@@ -76,13 +58,6 @@
         </div>
         <div class="sub-page-block-body">
           <%= content_for :form_block_common   %>
-        </div>
-        <!-- 支持组信息 -->
-        <div class="sub-page-block-header">
-          <h3 class="sub-page-block-title"><%= t(:label_icm_group_assignment_detail) %></h3>
-        </div>
-        <div class="sub-page-block-body">
-          <%= content_for :form_block_group  %>
         </div>
       </div>
     </div>
