--- a/modules/20_incident_icm/app/views/icm/support_groups/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/support_groups/_new_form.html.erb
@@ -1,55 +1,50 @@
-<%= form_for(@support_group, :url => {:action => "create"}, :builder => CustomFormBuilder) do |f| %>
+<%= form_for(@support_group, :url => {:action => "create",:step => params[:step]}, :builder => CustomFormBuilder) do |f| %>
     <%= f.hidden_field(:group_id) %>
     <% content_for :form_block_common do %>
         <table class="form-table">
           <tbody>
-          <tr>
-            <td class="label-col"><label><%= (t :label_icm_support_group_code) %></label></td>
-            <td class="data-col"><%= @group.code %></td>
-            <td class="label-col"><label><%= (t :label_icm_support_group_oncall_flag) %></label></td>
-            <td class="data-col"><%= f.check_box :oncall_flag %></td>
-          </tr>
-          <tr>
-            <td class="label-col"><label><%= (t :label_icm_support_group_name) %></label></td>
-            <td class="data-col"><%= @group[:name] %></td>
-            <td class="label-col"><label><%= (t :label_icm_support_group_vendor_flag) %></label></td>
-            <td class="data-col"><%= f.check_box :vendor_flag %></td>
-          </tr>
-          <tr>
-            <td class="label-col"><label><%= t(:label_icm_support_group_assignment_process_code) %></label></td>
-            <td class="data-col"><%= f.select :assignment_process_code, available_processes, {}, {:required => true, :id => "process_code"} %></td>
-            <td class="label-col"></td>
-            <td class="data-col"></td>
-          </tr>
-          <tr id="assignPersonTr">
-            <td class="label-col"><label><%= t(:label_icm_support_group_assign_person) %></label></td>
-            <td class="data-col"><%= f.select :assign_person_id, available_group_member(@group.id), {}, {:required => true} %></td>
-            <td class="label-col"></td>
-            <td class="data-col"></td>
-          </tr>
-          </tbody>
-        </table>
-    <% end %>
-    <% content_for :form_block_group do %>
-        <table class="form-table">
-          <tbody>
-          <tr>
-            <td class="label-col empty">&nbsp;</td>
-            <td class="data-col empty">&nbsp;</td>
-            <td class="label-col empty">&nbsp;</td>
-            <td class="data-col empty">&nbsp;</td>
-          </tr>
-          <tr>
-            <td class="label-col"></td>
-            <td class="data-col" style="width:82%">
-              <%= render :partial => "irm/duel_select/tmpl", :locals => {:label => "", :f => f, :types => support_group_duel_types, :sources => support_group_duel_values, :str_value_field => :assignment_str, :str_value => @support_group.get_assignment_str, :size => 10} %>
-            </td>
-          </tr>
+          <% if params[:step].to_s.eql?("1") -%>
+            <tr>
+              <td class="label-col"><label><%= t(:label_icm_chose_group) %></label></td>
+              <td class="data-col">
+                <%= f.blank_select :group_id, not_support_groups, {}, {:required => true} %>
+              </td>
+              <td class="label-col"></td>
+              <td class="data-col"></td>
+            </tr>
+          <% else -%>
+              <tr>
+                <td class="label-col"><label><%=(t :label_icm_support_group_code)%></label></td>
+                <td class="data-col"><label><%=@group.code%></label></td>
+                <td class="label-col"><label><%=(t :label_icm_support_group_oncall_flag)%></label></td>
+                <td class="data-col"><%=f.check_box :oncall_flag%></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label><%=(t :label_icm_support_group_name)%></label></td>
+                <td class="data-col"><label><%=@group[:name]%></label></td>
+                <td class="label-col"><label><%=(t :label_icm_support_group_vendor_flag)%></label></td>
+                <td class="data-col"><%=f.check_box :vendor_flag%></td>
+              </tr>
+
+              <tr>
+                <td class="label-col"><label><%=t(:label_icm_support_group_assignment_process_code)%></label></td>
+                <td class="data-col"><%=f.select :assignment_process_code,available_processes,{},{:required=>true,:id=>"process_code"}%></td>
+                <td class="label-col"><label><%=(t :label_status_code)%></label></td>
+                <td class="data-col"><%=f.select :status_code,options_from_collection_for_select(available_status,:lookup_code,:wrap_meaning,@support_group.status_code)%>
+                </td>
+              </tr>
+              <tr id="assignPersonTr">
+                <td class="label-col"><label><%= t(:label_icm_support_group_assign_person) %></label></td>
+                <td class="data-col"><%= f.blank_select :assign_person_id, available_group_member(@group.id), {}, {:required => true} %></td>
+                <td class="label-col"></td>
+                <td class="data-col"></td>
+              </tr>
+          <% end -%>
           </tbody>
         </table>
     <% end %>
     <% content_for :form_buttons do %>
-        <%= link_submit t(:save), {:class => "btn btn-primary"} %>
+        <%= link_submit t(:next), {:class => "btn btn-primary"} %>
         <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"} %>
     <% end %>
 
@@ -58,10 +53,13 @@
       <table class="page-block-header">
         <tr>
           <td class="page-block-title">
-            <h2 class="block-title"><%= t(:label_icm_support_group_new) %></h2>
+            <h2 class="block-title"><%= t(:step_n, :n => params[:step]) %><%=  t(:label_icm_chose_group) %></h2>
           </td>
           <td class="page-block-button">
             <%= content_for :form_buttons %>
+          </td>
+          <td class="page-block-help">
+            <%= t(:step_n_total_m, :n => params[:step], :m => "2") %>
           </td>
         </tr>
       </table>
@@ -75,13 +73,6 @@
           </div>
           <div class="sub-page-block-body">
             <%= content_for :form_block_common %>
-          </div>
-          <!-- 支持组信息 -->
-          <div class="sub-page-block-header">
-            <h3 class="sub-page-block-title"><%= t(:label_icm_group_assignment_detail) %></h3>
-          </div>
-          <div class="sub-page-block-body">
-            <%= content_for :form_block_group %>
           </div>
         </div>
       </div>
