--- a/modules/20_incident_icm/app/views/icm/support_groups/index.html.erb
+++ b/modules/20_incident_icm/app/views/icm/support_groups/index.html.erb
@@ -1,6 +1,26 @@
-<%= common_title%>
-<% if @group %>
-    <%= render :partial => "support_group_index" %>
-<% else %>
-    <%= render :partial => "no_group_notice"%>
-<% end %>
+<%= common_title %>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_icm_assign_rule_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:action => "new"},:class=>"btn btn-primary"%>
+    </td>
+    <td class="page-block-help">
+      <div id="searchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="support_groups"></div>
+    <%= datatable("support_groups",{:action=>"get_data"},[],{:search_box=>"searchBox",:paginator_box=>"paginator"})%>
+    <div id="paginator"></div>
+  </div>
+</div>
+
+<%# if @group %>
+    <%#= render :partial => "support_group_index" %>
+<%# else %>
+    <%#= render :partial => "no_group_notice"%>
+<%# end %>
