--- a/modules/80_bootstrap_bsp/app/views/layouts/application.html.erb
+++ b/modules/80_bootstrap_bsp/app/views/layouts/application.html.erb
@@ -74,8 +74,8 @@
                 <td class="sidebar-cell">
                   <div class="sidebar-cell-div">
                     <%= render :partial =>"/common/quick_create"%>
-                    <%if has_content?(:sidebar) %>
-                        <%=yield :sidebar %>
+                    <% if has_content?(:sidebar) and !only_basic_modules? %>
+                      <%=yield :sidebar %>
                     <%end%>
                   </div>
                 </td>
