--- a/modules/20_incident_icm/app/views/icm/support_groups/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/support_groups/_new_form.html.erb
@@ -40,7 +40,7 @@
         </table>
     <% end %>
     <% content_for :form_buttons do %>
-        <%= link_submit t(:next), {:class => "btn btn-primary"} %>
+        <%= link_submit t(:save), {:class => "btn btn-primary"} %>
         <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"} %>
     <% end %>
 
