--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/bootstrap/bootstrap-override.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/bootstrap/bootstrap-override.less
@@ -49,36 +49,38 @@ input, textarea, select, .uneditable-input {
 }
 
 .input-prepend .add-on, .input-append .add-on {
-
     padding: 2px 5px;
-
 }
 
 .input-prepend, .input-append {
     margin-bottom: 0px;
 }
 
-.tabbable .nav-tabs {
-    border-bottom: 1px solid #F8F8F8;
+h3.popover-title{
+    display: block;
 }
 
-.tabbable .nav {
-    margin-bottom: -1px;
-}
-
-.nav-tabs > .active > a,
-.nav-tabs > .active > a:hover {
-    color: #555555;
-    background-color: #ffffff;
-    border: 1px solid #1797C0;
-    cursor: default;
-
-}
-
-.nav-tabs > li > a {
-    padding-bottom: 4px;
-    padding-top: 4px;
-}
+//.tabbable .nav-tabs {
+//    border-bottom: 1px solid #F8F8F8;
+//}
+//
+//.tabbable .nav {
+//    margin-bottom: -1px;
+//}
+//
+//.nav-tabs > .active > a,
+//.nav-tabs > .active > a:hover {
+//    color: #555555;
+//    background-color: #ffffff;
+//    border: 1px solid #1797C0;
+//    cursor: default;
+//
+//}
+//
+//.nav-tabs > li > a {
+//    padding-bottom: 4px;
+//    padding-top: 4px;
+//}
 
 
 
