page-block-helper下的搜索框如果前后有说明文字无须换行

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
@@ -875,6 +875,9 @@ body .nav-tab-bar .nav-tab {
     .btn-toolbar {
         margin: 0;
     }
+    .inline-search-box {
+        display: inline-block;
+    }
 }
 
 .page-block .page-block-body {
