--- a/modules/10_ironmine_irm/app/views/irm/people/_edit_form.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/people/_edit_form.html.erb
@@ -124,7 +124,7 @@
   <% end %>
   <% content_for :form_buttons  do %>
     <% if @step %>
-        <%= link_to t(:next), {}, {:href => "javascript:void(0);", :class => "btn btn-primary"} %>
+        <%= link_to t(:next), {}, {:href => "javascript:void(0);", :class => "btn btn-primary next-step-btn"} %>
     <% else %>
         <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
     <% end %>
@@ -196,7 +196,7 @@
 
 <script type="text/javascript">
   $(function(){
-    $(".btn-primary").click(function(){
+    $("#irm_person_new a.next-step-btn").click(function(){
         $("#irm_person_new").attr('action', '<%= url_for(:action => "create", :controller => "irm/people", :next_action => "add_system")%>');
         $("#irm_person_new").submit();
     });
