--- a/modules/10_ironmine_irm/app/views/irm/group_members/new_from_person.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/group_members/new_from_person.html.erb
@@ -12,11 +12,12 @@
            </td>
            <td class="page-block-button">
              <%= link_to t(:last), {}, {:href => "javascript:void(0);", :class => "btn add_system_button"} %>
-             <%= link_submit t(:save),{:class=>"btn"}%>
+             <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
              <%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id},:class => "btn" )%>
            </td>
            <td class="page-block-help">
              <%= t(:step_n_total_m, :n => "3", :m => "3") %>
+             <div id="selectablePersonSearchBox" class="inline-search-box"></div>
            </td>
           <% else %>
               <td class="page-block-title">
@@ -44,8 +45,8 @@
           <td class="page-block-title"></td>
           <td class="page-block-button">
             <% if @step %>
-              <%= link_to t(:last), {}, {:href => "javascript:void(0);", :class => "add_system_button"} %>
-              <%= link_submit t(:save),{:class=>"btn"}%>
+              <%= link_to t(:last), {}, {:href => "javascript:void(0);", :class => "btn add_system_button"} %>
+              <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
               <%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id},:class => "btn" )%>
             <% else %>
               <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
