--- a/modules/10_ironmine_irm/app/views/irm/portlets/index.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/portlets/index.html.erb
@@ -14,8 +14,7 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <%= datatable("portlets",{:action=>"get_data",:format=>"json"},
-        [],{:paginator_box=>"paginator",:search_box=>"searchBox"})%>  </div>
+    <%= datatable("portlets",{:action=>"get_data"},[],{:paginator_box=>"paginator",:search_box=>"searchBox"})%>  </div>
 </div>
 
 
