增强报表中时间帧选择时间的功能

--- a/modules/10_ironmine_irm/app/views/irm/reports/show.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/reports/show.html.erb
@@ -1,1 +1,3 @@
-<%= render "show_#{@report.program_type.downcase}"%>
+<% if auto_run?(@report) %>
+  <%= render "show_#{@report.program_type.downcase}"%>
+<% end %>
