--- a/modules/10_ironmine_irm/app/views/irm/organization_infos/index.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/organization_infos/index.html.erb
@@ -11,7 +11,7 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <% if @organization.any? %>
+    <% if @organization.present? %>
         <table class="show-table">
           <tbody>
               <tr>
@@ -41,7 +41,7 @@
     <% end %>
   </div>
 </div>
-<% if @organization.any? %>
+<% if @organization.present? %>
 <!--页面结构-->
 <div class="page-block">
   <table class="page-block-header"><tr>
